test/invalid/idl/constructible-global.webidl
[Global, Exposed=YayImGlobal, LegacyFactoryFunction=Legacy()]
interface YayImGlobal {};

[Global, Exposed=YayImGlobal]
interface YayYoureGlobal {
  constructor();
};
